--- a/windaa.css
+++ b/windaa.css
@@ -1,7 +1,7 @@
-
 *,*:after,*:before {
   box-sizing:border-box;
 }
+
 .info{
   position: fixed;
   top: 100;
@@ -17,62 +17,13 @@
   top: 150;
   right: 15%;
 }
-.info4{
-  position: fixed;
-  top: 200;
-  right: 15%;
-}
-.info5{
-  position: fixed;
-  top: 250;
-  right: 15%;
-}
-.info6{
-  position: fixed;
-  top: 300;
-  right: 15%;
-}
-.info7{
-  position: fixed;
-  top: 350;
-  right: 15%;
-}
-.info8{
-  position: fixed;
-  top: 400;
-  right: 15%;
-}
-.info9{
-  position: fixed;
-  top: 450;
-  right: 15%;
-}
-.info10{
-  position: fixed;
-  top: 500;
-  right: 15%;
-}
-.info11{
-  position: fixed;
-  top: 550;
-  right: 15%;
-}
-.info12{
-  position: fixed;
-  top: 600;
-  right: 15%;
-}
-.info13{
-  position: fixed;
-  top: 650;
-  right: 15%;
-}
+
 .building {
   width: 300px;
   position: absolute;
-  background: #cc8b6b;
+ 
   background-size:cover,cover;
-  height: 700px;
+  height: 500%;
   left: 300px;
   top: 50px;
   
@@ -94,7 +45,7 @@
       display:block;
       width:100%;
       position:absolute;
-      top:0;
+      top:100%;
       border-top:10px solid rgb(64, 141, 224);
       opacity:.8;
     }
